# spamtrap-system

./: docker-compose.yml  readme.md  readme.org
backend/: Dockerfile  datamodels.py  pyproject.toml  readme.md  readme.org  requirements.txt  run_backend.py  setup.cfg
backend/config/: backend.yml.template  karton.ini
backend/config/thug/: thug.conf
backend/config/whitelists/: ip_whitelist.txt  url_whitelist.txt  windows_services.txt
backend/connectors/clients/: cuckoo_client.py  elastic_client.py  hatching_triage_client.py  karton_client.py
backend/connectors/enricher/: base_enricher.py  file_enricher.py
backend/core/: database.py  feed_ingestor.py  mediator.py
backend/core/processor/: dionaea_processor.py
backend/maltrap_backend/: mediator.py
backend/maltrap_backend/database/: database.py
backend/maltrap_backend/enricher/: base_enricher.py  enricher.py  file_enricher.py  thug_service.py  url_enricher.py
backend/maltrap_backend/feed/: feed.py
backend/maltrap_backend/processor/: mail_processor.py  processor.py
backend/peripherals/enricher/: base_enricher.py  cuckoo_conn.py  enricher.py  file_enricher.py  hatching_triage_conn.py  sandbox_conn.py  thug_client.py  url_enricher.py
backend/peripherals/reporter/: elastic_reporter.py  karton_reporter.py  misp-api-exploration.org  misp_reporter.py  reporter.py
backend/processing/: database.py  feed_ingestor.py  mediator.py
backend/processing/processor/: mail_processor.py  processor.py
backend/processing_backend/: mediator.py
backend/processing_backend/database/: database.py
backend/processing_backend/enricher/: base_enricher.py  cuckoo_conn.py  enricher.py  file_enricher.py  hatching_triage_conn.py  sandbox_conn.py  thug_experimental.py  thug_service.py  url_enricher.py  utils.py
backend/processing_backend/feed/: feed.py  ingestor.py
backend/processing_backend/processor/: baseprocessor.py  dionaea_processor.py  mail_processor.py  processor.py
backend/processing_backend/reporter/: base_reporter.py  elastic_reporter.py  misp_reporter.py  reporter.py
backend/spamtrap_backend/: __main__.py  datamodels.py
backend/spamtrap_backend/config/whitelists/: ip_whitelist.txt  url_whitelist.txt
backend/spamtrap_backend/connectors/clients/: cuckoo_client.py  elastic_client.py  hatching_triage_client.py  karton_client.py  misp_client.py  sandbox_client.py  thug_client.py
backend/spamtrap_backend/connectors/enricher/: enricher.py  file_enricher.py  url_enricher.py
backend/spamtrap_backend/connectors/reporter/: base_reporter.py  reporter.py
backend/spamtrap_backend/core/: database.py  mediator.py  message_ingestor.py
backend/spamtrap_backend/core/processor/: base_processor.py  dionaea_processor.py  mail_processor.py  processor.py
collectors/: pyproject.toml  readme.md  readme.org  requirements.txt  setup.cfg
collectors/fosr-collector/: fake_open_smtp_relay.py  feed_config.json  readme.md  readme.org  requirements.txt
collectors/imap-collector/: aioimap_collector.py  feed_config.yaml  mailbox_credentials_template.yaml  readme.org  requirements.txt
collectors/malspam_collectors/: __main__.py  aioimap_collector.py  aiolmtp_collector.py  feed_distributor.py  message_distributor.py
collectors/malspam_collectors/config/: feed_config.yaml
collectors/smtp-collector/: readme.md  readme.org
collectors/smtp-collector/catchall-lmtp/: catchall_lmtp.py  requirements.txt
collectors/smtpd-collector/catchall-lmtp/: Dockerfile  catchall_lmtp.py  entrypoint.sh  requirements.txt
collectors/smtpd-collector/postfix/: Dockerfile
collectors/spamtraps/: __main__.py  aiolmtp_collector.py  run_collector.py
collectors/src/: distributor.py
collectors/src/imap-collector/: aioimap_collector.py  readme.md
collectors/src/smtp-collector/: docker-compose.yml
(+48 files in other folders)
