[bdist_wheel]
universal = 1

[metadata]
name = spamtrap-backend
version = 0.0.1

[flake8]
ignore = E226,E302,E41
max-line-length = 160
exclude = tests/*,venv/*
max-complexity = 10

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    aio-pika>=8.2.4
    aiofile>=3.5.0
    aiohttp>=3.7.4
    async-dns>=1.1.8
    chardet>=2.1.7
    elasticsearch[async]>=7.10.0
    eml-parser>=1.14.6
    geoip2>=4.1.0
    hpfeeds>=3.0.0
    karton-core>=5.0.0
    maxminddb>=2.0.3
    motor>=3.0.0
    netaddr>=0.8.0
    pyfaup>=1.2
    pymisp[email]>=2.4.162.1
    pymongo>=4.2.0
    PyYAML>=5.4
    python-magic>=0.4.27
    sflock2>=0.3.36
    validators>=0.18.2
    varname>=0.6.3

[options.packages.find]
exclude =
    man*
    doc*
    test*


[options.entry_points]
console_scripts =
    spamtrap-backend = spamtrap_backend.__main__:main