[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
skip_glob = ["tests", "doc"]

[tool.pyright]
include = ["malspam_collectors"]
exclude = [
    "**/doc",
    "**/__pycache__",
    "test",
    "venv"
]
venv = "venv"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "Linux"

[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'