[flake8]
max-line-length = 88

[isort]
line_length = 88

[bdist_wheel]
universal = 1

[metadata]
name = spamtrap-collectors
version = 0.0.1

[options]
packages = find:
include_package_data = True

exclude =
    man*
    doc*
    test*
    
[options.entry_points]
console_scripts =
    imap-collector = mail-collectors.__main__:main
    smtp-collector = mail-collectors.__main__:main