[bdist_wheel]
universal = 1

[metadata]
name = malspam-collectors
version = attr: malspam_collectors.__version__

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    aio-pika
    aioimaplib
    hpfeeds
    PyYAML
    aiosmtpd
    mailbox
    
[options.packages.find]
exclude =
    man*
    doc*
    test*


[options.entry_points]
console_scripts =
    imap-collector = malspam_collectors.__main__:run_imap_collector
    smtp-collector = malspam_collectors.__main__:run_lmtp_collector