[bdist_wheel]
universal = 1

[metadata]
name = malspam-collectors
version = 0.0.1

[flake8]
ignore = E226,E302,E41
max-line-length = 160
exclude = tests/*,venv/*
max-complexity = 10

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    aio-pika
    aioimaplib
    hpfeeds
    PyYAML
    aiosmtpd
    mailbox
    
[options.packages.find]
exclude =
    man*
    doc*
    test*


[options.entry_points]
console_scripts =
    imap-collector = malspam_collectors.__main__:run_imap_collector
    smtp-collector = malspam_collectors.__main__:run_lmtp_collector